apply MySQL workaround
previous versions of the app failed to log in to the mysql database.
in this commit, ALLOW_EMPTY_PASSWORD is set to 1, and we log in as
the user mysql. Should be fixed in a future release.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: redis
   db:
     image: mysql
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
   web:
     build: .
     ports:
