--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,15 @@ version: '3'
 services:
   redis:
     image: redis
+    ports:
+     - "6379:6379"
   db:
     image: mysql
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+      MYSQL_ROOT_PASSWORD: abc123
+      MYSQL_DATABASE: clienteIoT
+    ports:
+     - "3306:3306"
   web:
     build: .
     ports:
